[gd_scene load_steps=9 format=2]

[ext_resource path="res://HUD.gd" type="Script" id=1]
[ext_resource path="res://font/umberto/umberto.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 40
outline_size = 5
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 25
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]

[sub_resource type="Theme" id=4]
default_font = SubResource( 3 )

[sub_resource type="DynamicFont" id=5]
size = 60
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=6]
size = 25
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="ScoreLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -91.0
margin_top = 7.0
margin_right = 90.0
margin_bottom = 45.0
custom_fonts/font = SubResource( 1 )
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MessageLabel" type="Label" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -7.0
margin_right = 1.0
margin_bottom = -100.0
custom_fonts/font = SubResource( 2 )
text = "Mangia le mele... 
ma attenzione alle bombe!"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -100.0
margin_top = -300.0
margin_right = 100.0
margin_bottom = -200.0
theme = SubResource( 4 )
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0.054902, 0.972549, 0.027451, 1 )
text = "Start"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MessageTimer" type="Timer" parent="."]

[node name="CreditButton" type="Button" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 1.4158
margin_top = -34.1582
margin_right = 112.416
margin_bottom = -1.1582
custom_fonts/font = SubResource( 6 )
toggle_mode = true
text = "Credits"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_MessageTimer_timeout"]
[connection signal="toggled" from="CreditButton" to="." method="_on_Button_toggled"]
[connection signal="toggled" from="CreditButton" to="." method="_on_CreditButton_toggled"]
